--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,18 @@ article {
         border-bottom-width: 1px;
         margin-top: 1.5rem;
         margin-bottom: 0.25rem;
+
+        a {
+            &.heading-permalink {
+                margin-right: 0.375rem;
+                font-size: 1.2rem;
+                font-weight: 400;
+                text-decoration: none;
+                position: relative;
+                top: -3px;
+                opacity: 0.6;
+            }
+        }
     }
     p {
         margin-top: 0.75rem;
